# app/docs/swagger.json
@@ -567,7 +567,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/pint.ReceiverValidationRequest"
+                            "$ref": "#/definitions/services.PartyIdentifyingCode"
                         }
                     }
                 ],
@@ -1182,26 +1182,6 @@
                 }
             }
         },
-        "pint.ReceiverValidationRequest": {
-            "type": "object",
-            "properties": {
-                "codeListName": {
-                    "description": "CodeListName is optional - the name of the code list (e.g., \"DID\", \"LEI\", \"DUNS\")",
-                    "type": "string",
-                    "example": "DID"
-                },
-                "codeListProvider": {
-                    "description": "CodeListProvider is the provider of the code list (e.g., \"WAVE\", \"CARX\", \"GLEIF\", \"W3C\")",
-                    "type": "string",
-                    "example": "W3C"
-                },
-                "partyCode": {
-                    "description": "PartyCode is the code to identify the party as provided by the code list provider",
-                    "type": "string",
-                    "example": "did:web:example.com:party:12345"
-                }
-            }
-        },
         "pint.ReceiverValidationResponse": {
             "type": "object",
             "properties": {
@@ -1238,6 +1218,26 @@
                     "description": "EnvelopeTransferFinishedResponseSignedContent is a JWS-signed response returned when\nan envelope transfer is accepted or rejected.",
                     "type": "string",
                     "example": "eyJhbGciOiJFZERTQSIsImtpZCI6IjQ0MzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkMzlkM"
+                }
+            }
+        },
+        "services.PartyIdentifyingCode": {
+            "type": "object",
+            "properties": {
+                "codeListName": {
+                    "description": "CodeListName is optional - the name of the code list (e.g., \"DID\", \"LEI\", \"DUNS\")",
+                    "type": "string",
+                    "example": "DID"
+                },
+                "codeListProvider": {
+                    "description": "CodeListProvider is the provider of the code list (e.g., \"WAVE\", \"CARX\", \"GLEIF\", \"W3C\")",
+                    "type": "string",
+                    "example": "W3C"
+                },
+                "partyCode": {
+                    "description": "PartyCode is the code to identify the party as provided by the code list provider",
+                    "type": "string",
+                    "example": "did:web:example.com:party:12345"
                 }
             }
         }
